--- a/src/app/tabs/tabs.component.scss
+++ b/src/app/tabs/tabs.component.scss
@@ -2,3 +2,7 @@ a:hover{
   text-decoration: none;
   color: #3f51b5;
 }
+
+.boo-tab-bottom{
+	position: fixed !important;
+}
